override padding for col-sm-4 to fix padding on small viewports

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -62,3 +62,9 @@ p {
 .modal-footer {
     padding: 5px 15px;
 }
+
+
+.col-sm-4 {
+    padding-left: 0;
+    padding-right: 0;
+}
